# xdg-desktop-portal-faraway

./: .gitignore  README.md  meson.build
.github/workflows/: lint.yml
data/: faraway.metainfo.xml.in  faraway.portal  meson.build  org.freedesktop.impl.portal.desktop.faraway.service.in  xdg-desktop-portal-faraway.service.in
src/: Config.vala.in  XdgDesktopPortalFaraway.vala  meson.build
src/AppChooser/: Portal.vala
